--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-globe fa-3x sr-contact"></i>
-                    <p><a href="https://www.jrviray.me">www.jrviray.me</a></p>
+                    <p><a href="https://github.com/jrviray">Github</a></p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
