--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Easier information access.</h2>
                     <hr class="light">
-                    <p class="text-faded">Get the application to find times without having to click around.</p>
+                    <p class="text-faded">The Bronco Shuttle Adviser collects avaliable information on the Bronco Shuttle and displays them in an easy to read fashion. No more meaningless navigation to get the information you need.</p>
+                    <p class="text-faded">The Bronco Shuttle Adviser is free, open source, and intergratable into your own application. See the Github README for more information. </p>
                 </div>
             </div>
         </div>
@@ -86,7 +87,7 @@
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
-                <h2>Free Download at the Google Playstore!</h2>
+                <h2>Free download at the Google Playstore!</h2>
                 <a href="https://play.google.com/store/apps/details?id=com.a499.cs.cpp.http" class="btn btn-default btn-xl sr-button">Download Now!</a>
             </div>
         </div>
