changed header photo and updated links

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="container text-center">
             <div class="call-to-action">
                 <h2>Free download at the Google Playstore!</h2>
-                <a href="https://play.google.com/store/apps/details?id=com.a499.cs.cpp.http" class="btn btn-default btn-xl sr-button">Download Now!</a>
+                <a href="https://play.google.com/store/apps/details?id=com.a499.cs.cpp.broncoshuttleadviser&hl=en" class="btn btn-default btn-xl sr-button">Download Now!</a>
             </div>
         </div>
     </aside>
